--- a/Latex/bachelorthesis.tex
+++ b/Latex/bachelorthesis.tex
@@ -417,7 +417,7 @@ The exchange probability can then be expressed in the following way~\cite{Xiongw
 \label{eq:rxsgld}
 \end{dmath}
 
-Here, the approximation is that the low frequency energies at different stages are the same for the same conformation: $\tilde{E}_p \left( \vec{X}_m^{(j)} \right) \approx \tilde{E}_p \left( \vec{X}_n^{(j)} \right)$ and $\tilde{E}_p \left( \vec{X}_n^{(i)} \right) \approx \tilde{E}_p \left( \vec{X}_m^{(i)} \right)$. This is accurate if $T_n = T_m$, which is used for all simulations. The exchange criterion stays the same (see equation \ref{eq:parallel}) and if $\lambda = 0$ the exchange probability is the same as in equation \ref{eq:parallel}. SGLD causes less pertubation on conformational distribution and therefore the exchange probability is much higher than in a RXLD simulation. From equations \ref{eq:parallel}, \ref{eq:rxsgld} and figure \ref{im:distributions} it can be seen that an exchange is only possible if the potential energy distributions overlap. Especially for big systems the exchange probability is much higher for RXSGLD simulations than for RXLD simulations. This can be seen in figure \ref{im:distributions}. The potential energy distributions for a polymer ($N = 500$) shows much less perturbation for different guiding forces in contrast to higher temperatures. This also shows the much better size extensiveness of the RXSGLD method.
+Here, the approximation is that the low frequency energies at different stages are the same for the same conformation: $\tilde{E}_p \left( \vec{X}_m^{(j)} \right) \approx \tilde{E}_p \left( \vec{X}_n^{(j)} \right)$ and $\tilde{E}_p \left( \vec{X}_n^{(i)} \right) \approx \tilde{E}_p \left( \vec{X}_m^{(i)} \right)$. This is accurate if $T_n = T_m$, which is used for all simulations. The exchange criterion stays the same (see equation \ref{eq:parallel}) and if $\lambda = 0$ the exchange probability is the same as in equation \ref{eq:parallel}. SGLD causes less pertubation on conformational distribution and therefore the exchange probability is much higher than in a RXLD simulation. From equations \ref{eq:parallel}, \ref{eq:rxsgld} and figure \ref{im:distributions} it can be seen that an exchange is only possible if the potential energy distributions overlap. Especially for big systems the exchange probability is much higher for RXSGLD simulations than for RXLD simulations. This can be seen in figure \ref{im:distributions}. The potential energy distributions for a polymer ($N = 500$) shows much less perturbation for different guiding forces in contrast to higher temperatures. This also shows that the RXSGLD method has advantages in terms of size extensiveness.
 
 \begin{figure} [H]
 \centering
